[251106] 업로드된 도서 목록

--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -586,10 +586,275 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "uploaded_list = \"\"\"SS0001\n",
+    "SS0004\n",
+    "SS0005\n",
+    "SS0006\n",
+    "SS0007\n",
+    "SS0008\n",
+    "SS0009\n",
+    "SS0010\n",
+    "SS0011\n",
+    "SS0012\n",
+    "SS0013\n",
+    "SS0014\n",
+    "SS0015\n",
+    "SS0016\n",
+    "SS0017\n",
+    "SS0018\n",
+    "SS0019\n",
+    "SS0020\n",
+    "SS0021\n",
+    "SS0022\n",
+    "SS0023\n",
+    "SS0024\n",
+    "SS0025\n",
+    "SS0026\n",
+    "SS0030\n",
+    "SS0031\n",
+    "SS0032\n",
+    "SS0033\n",
+    "SS0034\n",
+    "SS0035\n",
+    "SS0036\n",
+    "SS0037\n",
+    "SS0039\n",
+    "SS0040\n",
+    "SS0041\n",
+    "SS0042\n",
+    "SS0043\n",
+    "SS0045\n",
+    "SS0049\n",
+    "SS0050\n",
+    "SS0052\n",
+    "SS0053\n",
+    "SS0054\n",
+    "SS0055\n",
+    "SS0056\n",
+    "SS0057\n",
+    "SS0058\n",
+    "SS0059\n",
+    "SS0060\n",
+    "SS0061\n",
+    "SS0062\n",
+    "SS0064\n",
+    "SS0066\n",
+    "SS0069\n",
+    "SS0071\n",
+    "SS0072\n",
+    "SS0075\n",
+    "SS0078\n",
+    "SS0080\n",
+    "SS0083\n",
+    "SS0085\n",
+    "SS0090\n",
+    "SS0092\n",
+    "SS0093\n",
+    "SS0095\n",
+    "SS0099\n",
+    "SS0101\n",
+    "SS0103\n",
+    "SS0104\n",
+    "SS0105\n",
+    "SS0106\n",
+    "SS0107\n",
+    "SS0110\n",
+    "SS0111\n",
+    "SS0112\n",
+    "SS0113\n",
+    "SS0114\n",
+    "SS0116\n",
+    "SS0117\n",
+    "SS0119\n",
+    "SS0120\n",
+    "SS0121\n",
+    "SS0122\n",
+    "SS0123\n",
+    "SS0124\n",
+    "SS0125\n",
+    "SS0126\n",
+    "SS0127\n",
+    "SS0128\n",
+    "SS0129\n",
+    "SS0130\n",
+    "SS0131\n",
+    "SS0132\n",
+    "SS0133\n",
+    "SS0134\n",
+    "SS0135\n",
+    "SS0136\n",
+    "SS0137\n",
+    "SS0138\n",
+    "SS0140\n",
+    "SS0145\n",
+    "SS0148\n",
+    "SS0149\n",
+    "SS0150\n",
+    "SS0151\n",
+    "SS0152\n",
+    "SS0153\n",
+    "SS0154\n",
+    "SS0155\n",
+    "SS0156\n",
+    "SS0157\n",
+    "SS0158\n",
+    "SS0159\n",
+    "SS0160\n",
+    "SS0161\n",
+    "SS0164\n",
+    "SS0165\n",
+    "SS0166\n",
+    "SS0168\n",
+    "SS0169\n",
+    "SS0170\n",
+    "SS0171\n",
+    "SS0172\n",
+    "SS0173\n",
+    "SS0175\n",
+    "SS0176\n",
+    "SS0177\n",
+    "SS0178\n",
+    "SS0179\n",
+    "SS0185\n",
+    "SS0212\n",
+    "SS0229\n",
+    "SS0230\n",
+    "SS0234\n",
+    "SS0235\n",
+    "SS0262\n",
+    "SS0263\n",
+    "SS0268\n",
+    "SS0269\n",
+    "SS0270\n",
+    "SS0271\n",
+    "SS0272\n",
+    "SS0273\n",
+    "SS0274\n",
+    "SS0275\n",
+    "SS0277\n",
+    "SS0278\n",
+    "SS0279\n",
+    "SS0280\n",
+    "SS0281\n",
+    "SS0282\n",
+    "SS0285\n",
+    "SS0288\n",
+    "SS0289\n",
+    "SS0290\n",
+    "SS0291\n",
+    "SS0292\n",
+    "SS0293\n",
+    "SS0294\n",
+    "SS0295\n",
+    "SS0296\n",
+    "SS0297\n",
+    "SS0298\n",
+    "SS0300\n",
+    "SS0319\n",
+    "SS0320\n",
+    "SS0321\n",
+    "SS0322\n",
+    "SS0323\n",
+    "SS0324\n",
+    "SS0325\n",
+    "SS0326\n",
+    "SS0327\n",
+    "SS0328\n",
+    "SS0329\n",
+    "SS0330\n",
+    "SS0331\n",
+    "SS0333\n",
+    "SS0334\n",
+    "SS0335\n",
+    "SS0337\n",
+    "SS0338\n",
+    "SS0339\n",
+    "SS0340\n",
+    "SS0341\n",
+    "SS0342\n",
+    "SS0343\n",
+    "SS0344\n",
+    "SS0345\n",
+    "SS0346\n",
+    "SS0347\n",
+    "SS0348\n",
+    "SS0349\n",
+    "SS0350\n",
+    "SS0351\n",
+    "SS0352\n",
+    "SS0353\n",
+    "SS0354\n",
+    "SS0355\n",
+    "SS0356\n",
+    "SS0357\n",
+    "SS0358\n",
+    "SS0359\n",
+    "SS0360\n",
+    "SS0361\n",
+    "SS0362\n",
+    "SS0363\n",
+    "SS0365\n",
+    "SS0366\n",
+    "SS0367\n",
+    "SS0368\n",
+    "SS0369\n",
+    "SS0370\n",
+    "SS0371\n",
+    "SS0372\n",
+    "SS0373\n",
+    "SS0374\n",
+    "SS0375\n",
+    "SS0376\n",
+    "SS0377\n",
+    "SS0378\n",
+    "SS0379\n",
+    "SS0380\n",
+    "SS0382\n",
+    "SS0383\n",
+    "SS0384\n",
+    "SS0385\n",
+    "SS0387\n",
+    "SS0388\n",
+    "SS0389\n",
+    "SS0390\n",
+    "SS0391\n",
+    "SS0392\n",
+    "SS0393\n",
+    "SS0395\n",
+    "SS0401\n",
+    "SS0407\n",
+    "SS0409\n",
+    "SS0413\n",
+    "SS0414\n",
+    "SS0415\n",
+    "SS0416\n",
+    "SS0420\n",
+    "SS0424\"\"\".split('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "244"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(uploaded_list)"
+   ]
   },
   {
    "cell_type": "code",
