--- a/test.ipynb
+++ b/test.ipynb
@@ -730,10 +730,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "전체: 54387\n",
+      "옳은 것은? (단일 선택): 24268\n",
+      "옳지 않은 것은? (단일 선택): 27696\n",
+      "옳은 것을 모두 고른 것은? (다중 선택): 2423\n",
+      "갯수 일치 여부: True\n"
+     ]
+    }
+   ],
    "source": [
+    "import re\n",
     "import os, json\n",
     "\n",
     "with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple.json', 'r', encoding='utf-8') as f:\n",
@@ -743,19 +756,8 @@
     "pick_wrong = []\n",
     "pick_abcd = []\n",
     "\n",
-    "len(multiple)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "\n",
     "# 리스트를 순회하면서 remove()를 하면 인덱스가 꼬이므로, 새로 분류하는 방식으로 변경\n",
-    "remaining = []\n",
+    "# remaining = []\n",
     "for m in multiple:\n",
     "    question = m['question']\n",
     "    \n",
@@ -791,10 +793,8 @@
     "print(f\"옳은 것은? (단일 선택): {len(pick_right)}\")\n",
     "print(f\"옳지 않은 것은? (단일 선택): {len(pick_wrong)}\")\n",
     "print(f\"옳은 것을 모두 고른 것은? (다중 선택): {len(pick_abcd)}\")\n",
-    "print(f\"미분류: {len(remaining)}\")\n",
-    "print(f\"합계: {len(pick_right) + len(pick_wrong) + len(pick_abcd) + len(remaining)}\")\n",
-    "\n",
-    "len(remaining), len(pick_right), len(pick_wrong), len(pick_abcd)"
+    "# print(f\"미분류: {len(remaining)}\")\n",
+    "print(f\"갯수 일치 여부: {len(pick_right) + len(pick_wrong) + len(pick_abcd) == len(multiple)}\")"
    ]
   },
   {
@@ -809,15 +809,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pick_abcd"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -826,11 +817,132 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = \"\"\"\n",
+    "당신은 15년 경력의 문제 출제 경험이 뛰어난 전문가입니다.\n",
+    "다음 문제는 옳지 않은 것을 고르는 문제이고, 옳은 것을 고르는 문제로 변형해야 합니다.\n",
+    "주어진 답과 해설을 보고 답을 옳은 선택지로 변형하세요.\n",
+    "이때 변형은 새로운 답을 만드는 게 아니라, 정답인 선택지의 단어를 바꿔 최소화하는 것입니다. (ex. 높은 -> 낮은, 없다 -> 있다)\n",
+    "변형된 문제의 답이 모든 선택지가 아니라면, 답에 '오류'라고 표시해주세요.\n",
+    "\n",
+    "### 출력형식\n",
+    "[ {\n",
+    "\"question_id\": \"문제번호\",\n",
+    "\"question\": \"문제\",\n",
+    "\"options\": \"선택지\",\n",
+    "\"answer\": \"답\",\n",
+    "\"explanation\": \"해설\"\n",
+    "}, \n",
+    "{\n",
+    "\"question_id\": \"문제번호\",\n",
+    "\"question\": \"문제\",\n",
+    "\"options\": \"선택지\",\n",
+    "\"answer\": \"답\",\n",
+    "\"explanation\": \"해설\"\n",
+    "}\n",
+    "]\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('multiple_wrong.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(pick_wrong[:10], f, ensure_ascii=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_prompt = ''\n",
+    "\n",
+    "# for i, p in enumerate(pick_wrong.sample(10, seed=42)):\n",
+    "for i, p in enumerate(pick_wrong[:10]):\n",
+    "    question_id = p['file_id'] + '_' + p['tag']\n",
+    "    question = p['question']\n",
+    "    options = p['options']\n",
+    "    answer = p['answer']\n",
+    "    explanation = p['explanation']\n",
+    "\n",
+    "    single_user_prompt = f\"\"\"문제번호: {question_id}\n",
+    "문제: {question}\n",
+    "선택지: {options}\n",
+    "답: {answer}\n",
+    "해설: {explanation}\n",
+    "=====================\n",
+    "\"\"\"\n",
+    "    \n",
+    "    user_prompt += single_user_prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pick_wrong"
+    "print(user_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DEBUG] Config file path: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/llm_config.ini\n",
+      "<configparser.ConfigParser object at 0x33e5c26d0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tools.QueryModels import query_openrouter\n",
+    "\n",
+    "gemini25_flash = query_openrouter(system_prompt, user_prompt, model_name='google/gemini-2.5-flash')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gemini25_flash = gemini25_flash.replace('```json', '').replace('```', '')\n",
+    "# gemini25_flash = json.loads(gemini25_flash)\n",
+    "# # gemini25_flash\n",
+    "\n",
+    "gemini25_flash = json.load(open('multiple_wrong_gemini25_flash.json', 'r', encoding='utf-8'))\n",
+    "\n",
+    "with open('multiple_wrong_gemini25_flash.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(gemini25_flash, f, ensure_ascii=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gpt5 = json.load(open('multiple_wrong_gpt5.json', 'r', encoding='utf-8'))\n",
+    "\n",
+    "gpt5 = gpt5.replace('\"[', '[').replace(']\"', ']')\n",
+    "gpt5 = json.loads(gpt5)\n",
+    "# gpt5\n",
+    "\n",
+    "with open('multiple_wrong_gpt5.json', 'w', encoding='utf-8') as f:\n",
+    "    json.dump(gpt5, f, ensure_ascii=False, indent=4)"
    ]
   },
   {
