[251106] multiple_subdomain 전처리 완료, invalid_options -> find_invalid_options 파일에 적용

--- a/test.ipynb
+++ b/test.ipynb
@@ -379,65 +379,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### multiple options 오류들"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "import re\n",
-    "\n",
-    "# with open(os.path.join(BBASE_DIR, 'exam_statistics.json'), 'r', encoding='utf-8') as f:\n",
-    "    # stats = json.load(f)\n",
-    "\n",
-    "# for subject in stats.keys():\n",
-    "    # print(\"================\\n\", subject)\n",
-    "    # with open(f'evaluation/eval_data/mock_exam/1st/{subject}_mock_exam.json', 'r', encoding='utf-8') as f:\n",
-    "        # data = json.load(f)\n",
-    "\n",
-    "# file_name = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/1_filter/multiple.json'\n",
-    "file_name = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple_subdomain_classified_ALL.json'\n",
-    "\n",
-    "with open(file_name, 'r', encoding='utf-8') as f:\n",
-    "    data = json.load(f)\n",
-    "\n",
-    "if True:\n",
-    "    # ①②③④⑤로 시작하지 않는 경우를 찾기\n",
-    "    invalid_options = []\n",
-    "\n",
-    "    for d in data:\n",
-    "        if d['options'] and isinstance(d['options'], list):\n",
-    "            options = d['options']\n",
-    "            \n",
-    "            # 각 옵션을 확인\n",
-    "            for i, option in enumerate(options):\n",
-    "                # ①②③④⑤로 시작하지 않는 경우 찾기\n",
-    "                if not re.match(r'^[①②③④⑤]', option.strip()):\n",
-    "                    invalid_options.append({\n",
-    "                        'file_id': d['file_id'],\n",
-    "                        'domain': d['domain'],\n",
-    "                        'subdomain': d['subdomain'],\n",
-    "                        'tag': d['tag'],\n",
-    "                        'option_index': i,\n",
-    "                        'original_option': option,\n",
-    "                        # 'first_char': option.strip()[0] if option.strip() else ''\n",
-    "                    })\n",
-    "\n",
-    "    print(f\"①②③④⑤로 시작하지 않는 options 수: {len(invalid_options)}\")\n",
-    "    invalid_options"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "invalid_options"
+    "### multiple options 오류들\n",
+    "- find_multiple_choice_invalid_options.py"
    ]
   },
   {
@@ -587,11 +530,15 @@
    "source": [
     "# import os, json\n",
     "\n",
-    "# with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple_subdomain_classified_ALL.json', 'r', encoding='utf-8') as f:\n",
+    "# file_name = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple-re_subdomain_classified_ALL.json'\n",
+    "\n",
+    "\n",
+    "# with open(file_name, 'r', encoding='utf-8') as f:\n",
     "#     multiple = json.load(f)\n",
     "\n",
-    "# # with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple-fail_response.json', 'r', encoding='utf-8') as f:\n",
-    "# #     multiple_fail = json.load(f)"
+    "# file_failed_question = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple-fail_response.json'\n",
+    "# with open(file_failed_question, 'r', encoding='utf-8') as f:\n",
+    "#     multiple_fail = json.load(f)"
    ]
   },
   {
@@ -602,7 +549,8 @@
    "source": [
     "# for q in multiple:\n",
     "#     # print(q)\n",
-    "#     if q['domain'] == '분류실패':\n",
+    "#     # if q['domain'] == '분류실패':\n",
+    "#     if True:\n",
     "#         for m in multiple_fail:\n",
     "#             if (m['file_id'] == q['file_id']) and (m['tag'] == q['tag']):\n",
     "#                 q['domain'] = m['domain']\n",
@@ -615,12 +563,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple_subdomain_classified_ALL.json', 'w', encoding='utf-8') as f:\n",
-    "#     json.dump(multiple, f, ensure_ascii=False, indent=4)"
+    "with open(file_name, 'w', encoding='utf-8') as f:\n",
+    "    json.dump(multiple, f, ensure_ascii=False, indent=4)"
    ]
   },
   {
@@ -630,18 +578,16 @@
    "outputs": [],
    "source": [
     "# import json\n",
-    "# with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple-fail_response_fail_again.json', 'r', encoding='utf-8') as f:\n",
-    "#     multiple_fail_again = json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "# file_fail_response = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple-fail_fail_response.json'\n",
+    "\n",
+    "# with open(file_fail_response, 'r', encoding='utf-8') as f:\n",
+    "#     multiple_fail_again = json.load(f)\n",
+    "\n",
+    "# # response 파싱 다시 해보기\n",
     "# for q in multiple:\n",
-    "#     if q['domain'] == '':\n",
+    "#     # if q['domain'] == '':\n",
+    "#     if True:\n",
     "#         for m in multiple_fail_again:\n",
     "#             file_id = m['qna_id'].split('_')[0]\n",
     "#             tag = m['qna_id'].replace(file_id+'_', '')\n",
@@ -651,8 +597,31 @@
     "#                 q['classification_reason'] = m['reason']\n",
     "#                 q['is_calculation'] = m['is_calculation']\n",
     "#                 # print(q)\n",
-    "#                 # break\n"
+    "#                 # break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # 다시 돌릴거 리스트 만들기\n",
+    "# re_run_list = []\n",
+    "# for m in multiple:\n",
+    "#     if (m['domain'] == '') or (m['domain'] == '분류실패'):\n",
+    "#         re_run_list.append(m)\n",
+    "\n",
+    "# with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple-re_re_run.json', 'w', encoding='utf-8') as f:\n",
+    "#     json.dump(re_run_list, f, ensure_ascii=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -663,15 +632,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-06 10:13:06,480 - WARNING - evaluation_yejin 디렉토리를 찾을 수 없어 /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation을 사용합니다.\n",
+      "2025-11-06 10:13:06,480 - INFO - 출력 디렉토리: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/multiple_with_subdomain\n",
+      "2025-11-06 10:13:06,494 - INFO - 통계 정보 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/multiple_with_subdomain/classification_statistics.json\n"
+     ]
+    }
+   ],
    "source": [
     "import os, json\n",
     "from tools.evaluation import qna_subdomain_classifier\n",
     "\n",
-    "\n",
-    "with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple_subdomain_classified_ALL.json', 'r', encoding='utf-8') as f:\n",
+    "file_name = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple-re_subdomain_classified_ALL.json'\n",
+    "with open(file_name, 'r', encoding='utf-8') as f:\n",
     "    multiple = json.load(f)\n",
     "\n",
     "classifier = qna_subdomain_classifier.QnASubdomainClassifier()\n",
@@ -682,24 +661,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-06 09:32:54,463 - INFO - 통계 정보 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/multiple_with_subdomain/classification_statistics.json\n"
+     ]
+    }
+   ],
    "source": [
-    "for m in multiple:\n",
-    "    if m['subdomain'].count('-') >= 1:\n",
-    "        # print(m)\n",
-    "        # break\n",
-    "        m['subdomain'] = m['subdomain'].split('-')[0].strip()\n",
-    "        # print(m)\n",
-    "        # break\n",
-    "    elif m['subdomain'].count('.') >= 1:\n",
-    "        m['subdomain'] = m['subdomain'].split('.')[1].strip()\n",
+    "## 처음 subdomain 돌리고 잘못 부여된 subdomain 조정\n",
+    "# for m in multiple:\n",
+    "#     if m['subdomain'].count('-') >= 1:\n",
+    "#         # print(m)\n",
+    "#         # break\n",
+    "#         m['subdomain'] = m['subdomain'].split('-')[0].strip()\n",
+    "#         # print(m)\n",
+    "#         # break\n",
+    "#     elif m['subdomain'].count('.') >= 1:\n",
+    "#         m['subdomain'] = m['subdomain'].split('.')[1].strip()\n",
     "        \n",
     "\n",
-    "classifier.save_statistics(multiple)\n",
-    "    # print(\"없는데?\", m['subdomain'])\n",
+    "# classifier.save_statistics(multiple)\n",
+    "#     # print(\"없는데?\", m['subdomain'])\n",
     "\n",
-    "with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple_subdomain_classified_ALL.json', 'w', encoding='utf-8') as f:\n",
-    "    json.dump(multiple, f, ensure_ascii=False, indent=4)\n"
+    "# with open(file_name, 'w', encoding='utf-8') as f:\n",
+    "#     json.dump(multiple, f, ensure_ascii=False, indent=4)\n"
    ]
   },
   {
@@ -708,17 +696,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple_subdomain_classified_ALL.json', 'r', encoding='utf-8') as f:\n",
-    "    multiple = json.load(f)\n",
+    "# with open(file_name, 'r', encoding='utf-8') as f:\n",
+    "#     multiple = json.load(f)\n",
     "\n",
-    "for m in multiple:\n",
-    "    m['domain'] = \"\"\n",
-    "    m['subdomain'] = \"\"\n",
-    "    m['classification_reason'] = \"\"\n",
-    "    m['is_calculation'] = False\n",
+    "# for m in multiple:\n",
+    "#     m['domain'] = \"\"\n",
+    "#     m['subdomain'] = \"\"\n",
+    "#     m['classification_reason'] = \"\"\n",
+    "#     m['is_calculation'] = False\n",
     "\n",
-    "with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple.json', 'w', encoding='utf-8') as f:\n",
-    "    json.dump(multiple, f, ensure_ascii=False, indent=4)\n"
+    "# with open('/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple.json', 'w', encoding='utf-8') as f:\n",
+    "#     json.dump(multiple, f, ensure_ascii=False, indent=4)\n"
    ]
   },
   {
