[251106] 기타 변경사항

--- a/test.ipynb
+++ b/test.ipynb
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,41 +577,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1000, 969, 959)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(first_exam), len(second_exam), len(third_exam)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "전체: 2928\n",
-      "옳은 것은? (단일 선택): 1136\n",
-      "옳지 않은 것은? (단일 선택): 1604\n",
-      "옳은 것을 모두 고른 것은? (다중 선택): 188\n",
-      "갯수 일치 여부: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "multiple = first_exam + second_exam + third_exam\n",
     "\n",
@@ -670,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,63 +728,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-11-06 16:29:58,922 - WARNING - evaluation_yejin 디렉토리를 찾을 수 없어 /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation을 사용합니다.\n",
-      "2025-11-06 16:29:58,923 - INFO - 출력 디렉토리: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/multiple_with_subdomain\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/tools\n",
-      "[DEBUG] Config file path: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/llm_config.ini\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-11-06 16:30:00,709 - INFO - HTTP Request: POST https://openrouter.ai/api/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/tools\n",
-      "[DEBUG] Config file path: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/llm_config.ini\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-11-06 16:32:16,371 - INFO - HTTP Request: POST https://openrouter.ai/api/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/tools\n",
-      "[DEBUG] Config file path: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/llm_config.ini\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-11-06 16:35:06,474 - INFO - HTTP Request: POST https://openrouter.ai/api/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tools.QueryModels import query_openrouter\n",
     "from tools.evaluation import qna_subdomain_classifier\n",
@@ -823,6 +746,113 @@
     "    \n",
     "    with open(f'multiple_wrong_{model_name}.json', 'w', encoding='utf-8') as f:\n",
     "        json.dump(response, f, ensure_ascii=False, indent=4)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 이제 전부 옳은 것임! -> 전부 옳지 않은 것으로 바꾸기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = \"\"\"\n",
+    "당신은 15년 경력의 문제 출제 경험이 뛰어난 전문가입니다.\n",
+    "다음 문제는 선택지가 모두 옳은 것으로, 모두 옳지 않은 선지로 변형해야 합니다.\n",
+    "주어진 선택지들과 해설을 보고, 문장의 역/이/대우를 활용하여 옳지 않은 선택지로 변형하세요.\n",
+    "이때 변형은 선택지의 단어를 바꿔 할루시네이션을 최소화해야 합니다. (ex. 높은 -> 낮은, 없다 -> 있다)\n",
+    "\n",
+    "### 출력형식\n",
+    "[ {\n",
+    "\"question_id\": \"문제번호\",\n",
+    "\"question\": \"문제\",\n",
+    "\"options\": \"선택지\",\n",
+    "\"answer\": \"답\",\n",
+    "\"explanation\": \"해설\"\n",
+    "}, \n",
+    "{\n",
+    "\"question_id\": \"문제번호\",\n",
+    "\"question\": \"문제\",\n",
+    "\"options\": \"선택지\",\n",
+    "\"answer\": \"답\",\n",
+    "\"explanation\": \"해설\"\n",
+    "}\n",
+    "]\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-06 18:12:51,409 - WARNING - evaluation_yejin 디렉토리를 찾을 수 없어 /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation을 사용합니다.\n",
+      "2025-11-06 18:12:51,410 - INFO - 출력 디렉토리: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/multiple_with_subdomain\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/tools\n",
+      "[DEBUG] Config file path: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/llm_config.ini\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-06 18:12:55,010 - INFO - HTTP Request: POST https://openrouter.ai/api/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "from tools.QueryModels import query_openrouter\n",
+    "from tools.evaluation import qna_subdomain_classifier\n",
+    "\n",
+    "classifier = qna_subdomain_classifier.QnASubdomainClassifier()\n",
+    "\n",
+    "for model_path in ['google/gemini-2.5-pro']: # 'openai/gpt-5','anthropic/claude-sonnet-4.5', 'openai/o3', \n",
+    "    model_name = model_path.split('/')[-1]\n",
+    "    company = model_path.split('/')[0]\n",
+    "\n",
+    "    user_prompt = ''\n",
+    "    with open(f'multiple_wrong_{model_name}.json', 'r', encoding='utf-8') as f:\n",
+    "        multiple_wrong = json.load(f)\n",
+    "\n",
+    "    for i, p in enumerate(multiple_wrong):\n",
+    "        question_id = p['question_id']\n",
+    "        question = p['question']\n",
+    "        options = p['options']\n",
+    "        answer = p['answer']\n",
+    "        explanation = p['explanation']\n",
+    "\n",
+    "        single_user_prompt = f\"\"\"문제번호: {question_id}\n",
+    "    문제: {question}\n",
+    "    선택지: {options}\n",
+    "    답: {answer}\n",
+    "    해설: {explanation}\n",
+    "    =====================\n",
+    "    \"\"\"\n",
+    "\n",
+    "        user_prompt += single_user_prompt\n",
+    "\n",
+    "    response = query_openrouter(system_prompt, user_prompt, model_name=model_path)\n",
+    "    response = classifier.parse_api_response(response)\n",
+    "    \n",
+    "    with open(f'multiple_wrong2right2wrong_{model_name}.json', 'w', encoding='utf-8') as f:\n",
+    "        json.dump(response, f, ensure_ascii=False, indent=4)"
    ]
   },
   {
