--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,30 +563,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'page': '0936',\n",
-       " 'chapter': 'PART 2 보험조사분석사',\n",
-       " 'page_contents': '① 개인정보에 관한 사항에서 개인정보보호법과 의료법이 충돌할 경우 개인정보보호법이 먼저 적용된다.\\n② 경찰관서에서 환자의 진료기록에 대한 자료를 요구할 경우 의료법을 우선 적용하여 환자의 진료기록을 내어줄 수 있다.\\n③ 진료받은 환자의 진료내용에 대해 법원으로부터 민사소송법 제294조 및 가사소송법 제8조에 의거 사실조회 촉탁을 의뢰받아 의료기관이 임의로 환자의 진료기록을 제공하는 것은 의료법 위반이 될 수 있다.\\n④ 환자의 의식이 없거나 응급환자일 때 또는 환자의 보호자가 없어 동의를 받을 수 없는 경우에는 환자나 환자 보호자의 동의 없이 의료기록을 송부할 수 있도록 허용하고 있다.\\n해설 • 개인정보에 관한 사항에서 개인정보보호법과 의료법이 충돌할 경우, 의료법상 개인정보 보호에 관한 내용이 있다면 의료법을 우선 적용하되, 의료법상 규정되지 않은 개인정보 보호에 관해서는 개인정보보호법을 적용한다. - 개인정보보호법 제6조\\n• 경찰관서에서 환자의 진료기록에 대한 자료를 요구할 경우 의료법을 우선 적용한다. 따라서 「의료법」 제21조 제2항 제6호에 따라 「형사소송법」 제106조, 제215조 또는 제218조에 따른 경우라면 환자의 진료기록을 내어줄 수 있다.\\n• 「민사소송법」 제294조 및 「가사소송법」 제8조에 의거 사실조회 촉탁을 의뢰받아 의료기관이 임의로 환자의 진료기록을 제공하는 것은 「의료법」 위반이 될 수 있다.\\n▶ 환자의 의료기록을 열람할 수 있는지?\\n환자, 환자의 배우자, 환자의 직계존비속, 배우자의 직계존속, 환자가 지정하는 대리인\\n▶ 환자의 대리인에 의한 진료기록 열람에 필요한 서류?\\n사본발급 요청자의 신분증 사본, 환자의 자필로 서명한 동의서, 환자의 신분증 사본\\n정답 47.①',\n",
-       " 'add_info': []}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "page"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,22 +824,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "244"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(uploaded_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fin-Know 평가"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_think_block(text):   ## for Qwen3\n",
+    "    if isinstance(text, str):\n",
+    "        return re.sub(r\"<think>.*?</think>\\s*\", \"\", text, flags=re.DOTALL)\n",
+    "    return text\n",
+    "\n",
+    "model_name = 'gpt-5'\n",
+    "\n",
+    "res_file = f\"/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/fai_code/eval_fai/result/res_{model_name}_fai-fin-know-2504a.csv\"\n",
+    "\n",
+    "df_res = pd.read_csv(res_file)\n",
+    "df_res = df_res.fillna(\" \")\n",
+    "df_res['response_rev'] = df_res['response'].apply(remove_think_block)\n",
+    "df_res['response_rev'] = df_res['response_rev'].map(lambda x: \"\".join(re.findall(r\"[a-zA-Z]\", x)))\n",
+    "df_res['response_rev'] = df_res['response_rev'].map(lambda x: x.lower().strip()[-1] if x != \"\" else x)\n",
+    "\n",
+    "df_res['correct'] = (df_res['answer'] == df_res['response_rev'])\n",
+    "\n",
+    "# df_to_write = df_res[[\"answer\", \"response_rev\", \"response\", \"correct\"]]\n",
+    "# df_to_write.to_csv(\"thinking_answer.csv\")\n",
+    "precision = round(df_res['correct'].sum()/len(df_res)*100, 2)\n",
+    "print(precision)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_res[df_res['response'] == \"\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_res[df_res['correct'] == False][['answer', 'response']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os, sys\n",
+    "import json\n",
+    "\n",
+    "model_name = 'res_gemini-2.5-flash_fai-fin-know-2504a'\n",
+    "path = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/fai_code/eval_fai/result'\n",
+    "\n",
+    "# JSON에서 파일 목록 로드\n",
+    "merge_files = [file for file in os.listdir(path) if file.startswith(model_name)]\n",
+    "print(merge_files[0])\n",
+    "print(f\"[병합] 총 {len(merge_files)}개 파일을 병합합니다...\")\n",
+    "\n",
+    "dfs = []\n",
+    "for i, file_path in enumerate(merge_files):\n",
+    "    try:\n",
+    "        df = pd.read_csv(os.path.join(path, file_path), encoding='utf-8-sig')\n",
+    "        print(f\"[병합] 그룹 {i}: {len(df)}개 행 로드 완료 - {file_path}\")\n",
+    "        dfs.append(df)\n",
+    "    except Exception as e:\n",
+    "        print(f\"[병합] 오류: {file_path} 로드 실패 - {e}\")\n",
+    "        sys.exit(1)\n",
+    "\n",
+    "if len(dfs) == 0:\n",
+    "    print(\"[병합] 오류: 병합할 데이터가 없습니다!\")\n",
+    "    sys.exit(1)\n",
+    "\n",
+    "# 모든 데이터프레임 병합\n",
+    "merged_df = pd.concat(dfs, ignore_index=True)\n",
+    "print(f\"[병합] 총 {len(merged_df)}개 행으로 병합 완료\")\n",
+    "\n",
+    "# 병합된 파일 저장\n",
+    "merged_df.to_csv(os.path.join(path, model_name+\".csv\"), index=False, encoding='utf-8-sig')\n",
+    "print(f\"[병합] 병합된 파일 저장: {model_name}\")\n",
+    "print(f\"[병합] ✓ 병합 완료!\")"
    ]
   },
   {
@@ -866,7 +937,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "internal",
    "language": "python",
    "name": "python3"
   },
@@ -880,7 +951,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
