[251107] 도메인별 is_calculation 통계

--- a/test.ipynb
+++ b/test.ipynb
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,6 +889,68 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================\n",
+      "도메인별 통계\n",
+      "============================================================\n",
+      "도메인                  전체         계산문제       비율        \n",
+      "------------------------------------------------------------\n",
+      "경영                   125        15         12.00%\n",
+      "경제                   125        29         23.20%\n",
+      "내부통제                 63         1          1.59%\n",
+      "노무                   83         1          1.20%\n",
+      "리스크관리                62         14         22.58%\n",
+      "보상처리                 125        6          4.80%\n",
+      "보험계약                 125        6          4.80%\n",
+      "세무                   83         17         20.48%\n",
+      "영업                   62         0          0.00%\n",
+      "자산운용                 63         7          11.11%\n",
+      "회계                   84         36         42.86%\n",
+      "------------------------------------------------------------\n",
+      "합계                   1000       132        13.20%\n",
+      "============================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 도메인별 통계 계산\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "calculation = defaultdict(int)  # 계산 문제 개수\n",
+    "total_by_domain = defaultdict(int)  # 전체 문제 개수\n",
+    "\n",
+    "for question in first_exam:\n",
+    "    domain = question.get('domain', '미분류')\n",
+    "    total_by_domain[domain] += 1\n",
+    "    if question.get('is_calculation') == True:\n",
+    "        calculation[domain] += 1\n",
+    "\n",
+    "# 결과 출력\n",
+    "print(\"=\" * 60)\n",
+    "print(\"도메인별 통계\")\n",
+    "print(\"=\" * 60)\n",
+    "print(f\"{'도메인':<20} {'전체':<10} {'계산문제':<10} {'비율':<10}\")\n",
+    "print(\"-\" * 60)\n",
+    "\n",
+    "for domain in sorted(total_by_domain.keys()):\n",
+    "    total = total_by_domain[domain]\n",
+    "    calc_count = calculation[domain]\n",
+    "    ratio = (calc_count / total * 100) if total > 0 else 0\n",
+    "    print(f\"{domain:<20} {total:<10} {calc_count:<10} {ratio:.2f}%\")\n",
+    "\n",
+    "print(\"-\" * 60)\n",
+    "print(f\"{'합계':<20} {sum(total_by_domain.values()):<10} {sum(calculation.values()):<10} {sum(calculation.values())/sum(total_by_domain.values())*100:.2f}%\")\n",
+    "print(\"=\" * 60)"
+   ]
   },
   {
    "cell_type": "code",
