--- a/test.ipynb
+++ b/test.ipynb
@@ -59,9 +59,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-08 16:38:42 - INFO - 데이터 파일 로딩 시작: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple_subdomain_classified_ALL.json\n",
+      "2025-11-08 16:38:42 - INFO - 데이터 로딩 완료: 총 54387개 문제\n",
+      "2025-11-08 16:38:42 - INFO - ==================================================\n",
+      "2025-11-08 16:38:42 - INFO - 과목: 금융일반\n",
+      "2025-11-08 16:38:42 - INFO - --------------------------------------------------\n",
+      "2025-11-08 16:38:42 - INFO - 도메인: 경제\n",
+      "2025-11-08 16:38:43 - INFO -   - 미시경제학: 32 x 5세트 (총 4086개 중 160개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 경제정책 및 시사경제: 30 x 5세트 (총 506개 중 150개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 거시경제학: 32 x 5세트 (총 3896개 중 160개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 국제경제학: 31 x 5세트 (총 2330개 중 155개 사용)\n",
+      "2025-11-08 16:38:43 - INFO - --------------------------------------------------\n",
+      "2025-11-08 16:38:43 - INFO - 도메인: 경영\n",
+      "2025-11-08 16:38:43 - INFO -   - 경영컨설팅 및 기술평가: 31 x 5세트 (총 1500개 중 155개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 경영학원론 및 조직관리: 31 x 5세트 (총 828개 중 155개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 재무관리 및 기업가치평가: 32 x 5세트 (총 1588개 중 160개 사용)\n",
+      "2025-11-08 16:38:43 - WARNING -   - (ERROR) 마케팅 및 영업전략: 134/155 (데이터 부족: 21개 필요)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 1st세트: 250/250 (100.00%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/1st/금융일반_exam.json\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 2nd세트: 250/250 (100.00%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/2nd/금융일반_exam.json\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 3rd세트: 250/250 (100.00%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/3rd/금융일반_exam.json\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 4th세트: 250/250 (100.00%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/4th/금융일반_exam.json\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 5th세트: 229/250 (91.60%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/5th/금융일반_exam.json\n",
+      "2025-11-08 16:38:43 - INFO - ==================================================\n",
+      "2025-11-08 16:38:43 - INFO - 과목: 금융심화\n",
+      "2025-11-08 16:38:43 - INFO - --------------------------------------------------\n",
+      "2025-11-08 16:38:43 - INFO - 도메인: 회계\n",
+      "2025-11-08 16:38:43 - INFO -   - 재무회계: 21 x 5세트 (총 4432개 중 105개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 회계기준 및 감사: 21 x 5세트 (총 204개 중 105개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 관리회계: 21 x 5세트 (총 1710개 중 105개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 세무회계: 21 x 5세트 (총 127개 중 105개 사용)\n",
+      "2025-11-08 16:38:43 - INFO - --------------------------------------------------\n",
+      "2025-11-08 16:38:43 - INFO - 도메인: 세무\n",
+      "2025-11-08 16:38:43 - INFO -   - 소득세·법인세: 21 x 5세트 (총 1681개 중 105개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 세무재정정책: 21 x 5세트 (총 516개 중 105개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 상속세·증여세: 20 x 5세트 (총 419개 중 100개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 부가가치세 및 원천징수: 21 x 5세트 (총 464개 중 105개 사용)\n",
+      "2025-11-08 16:38:43 - INFO - --------------------------------------------------\n",
+      "2025-11-08 16:38:43 - INFO - 도메인: 노무\n",
+      "2025-11-08 16:38:43 - INFO -   - 노동법 및 사회보험: 28 x 5세트 (총 445개 중 140개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 근로기준법 및 인사관리: 28 x 5세트 (총 181개 중 140개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 노사관계 및 분쟁조정: 27 x 5세트 (총 186개 중 135개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 1st세트: 250/250 (100.00%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/1st/금융심화_exam.json\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 2nd세트: 250/250 (100.00%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/2nd/금융심화_exam.json\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 3rd세트: 250/250 (100.00%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/3rd/금융심화_exam.json\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 4th세트: 250/250 (100.00%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/4th/금융심화_exam.json\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 5th세트: 250/250 (100.00%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/5th/금융심화_exam.json\n",
+      "2025-11-08 16:38:43 - INFO - ==================================================\n",
+      "2025-11-08 16:38:43 - INFO - 과목: 금융실무1\n",
+      "2025-11-08 16:38:43 - INFO - --------------------------------------------------\n",
+      "2025-11-08 16:38:43 - INFO - 도메인: 내부통제\n",
+      "2025-11-08 16:38:43 - INFO -   - 윤리경영 및 내부감사: 15 x 5세트 (총 394개 중 75개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 컴플라이언스 및 법규: 17 x 5세트 (총 3767개 중 85개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 소비자보호: 16 x 5세트 (총 551개 중 80개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 자금세탁방지 및 AML: 15 x 5세트 (총 102개 중 75개 사용)\n",
+      "2025-11-08 16:38:43 - INFO - --------------------------------------------------\n",
+      "2025-11-08 16:38:43 - INFO - 도메인: 자산운용\n",
+      "2025-11-08 16:38:43 - INFO -   - 투자분석 및 포트폴리오이론: 16 x 5세트 (총 3884개 중 80개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 연금·대체투자: 15 x 5세트 (총 964개 중 75개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 펀드운용: 16 x 5세트 (총 1340개 중 80개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 파생상품: 16 x 5세트 (총 3622개 중 80개 사용)\n",
+      "2025-11-08 16:38:43 - INFO - --------------------------------------------------\n",
+      "2025-11-08 16:38:43 - INFO - 도메인: 리스크관리\n",
+      "2025-11-08 16:38:43 - INFO -   - 리스크기초이론: 16 x 5세트 (총 670개 중 80개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 보험리스크관리: 15 x 5세트 (총 199개 중 75개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 금융리스크측정기법: 16 x 5세트 (총 946개 중 80개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 통합리스크관리: 15 x 5세트 (총 97개 중 75개 사용)\n",
+      "2025-11-08 16:38:43 - INFO - --------------------------------------------------\n",
+      "2025-11-08 16:38:43 - INFO - 도메인: 영업\n",
+      "2025-11-08 16:38:43 - INFO -   - 고객상담 및 민원관리: 16 x 5세트 (총 285개 중 80개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 영업윤리 및 법규준수: 16 x 5세트 (총 899개 중 80개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 금융상품영업: 15 x 5세트 (총 396개 중 75개 사용)\n",
+      "2025-11-08 16:38:43 - WARNING -   - (ERROR) 세일즈커뮤니케이션: 66/75 (데이터 부족: 9개 필요)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 1st세트: 250/250 (100.00%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/1st/금융실무1_exam.json\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 2nd세트: 250/250 (100.00%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/2nd/금융실무1_exam.json\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 3rd세트: 250/250 (100.00%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/3rd/금융실무1_exam.json\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 4th세트: 250/250 (100.00%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/4th/금융실무1_exam.json\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 5th세트: 241/250 (96.40%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/5th/금융실무1_exam.json\n",
+      "2025-11-08 16:38:43 - INFO - ==================================================\n",
+      "2025-11-08 16:38:43 - INFO - 과목: 금융실무2\n",
+      "2025-11-08 16:38:43 - INFO - --------------------------------------------------\n",
+      "2025-11-08 16:38:43 - INFO - 도메인: 보험계약\n",
+      "2025-11-08 16:38:43 - INFO -   - 보험상품구조: 32 x 5세트 (총 1789개 중 160개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 언더라이팅 및 재보험: 30 x 5세트 (총 580개 중 150개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 보험법 및 계약이론: 33 x 5세트 (총 4849개 중 165개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   - 보험회계 및 공시: 30 x 5세트 (총 415개 중 150개 사용)\n",
+      "2025-11-08 16:38:43 - INFO - --------------------------------------------------\n",
+      "2025-11-08 16:38:43 - INFO - 도메인: 보상처리\n",
+      "2025-11-08 16:38:43 - WARNING -   - (ERROR) 보험금심사: 309/310 (데이터 부족: 1개 필요)\n",
+      "2025-11-08 16:38:43 - INFO -   - 손해사정실무: 63 x 5세트 (총 717개 중 315개 사용)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 1st세트: 250/250 (100.00%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/1st/금융실무2_exam.json\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 2nd세트: 250/250 (100.00%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/2nd/금융실무2_exam.json\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 3rd세트: 250/250 (100.00%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/3rd/금융실무2_exam.json\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 4th세트: 250/250 (100.00%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/4th/금융실무2_exam.json\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 5th세트: 249/250 (99.60%)\n",
+      "2025-11-08 16:38:43 - INFO -   ====> 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam/5th/금융실무2_exam.json\n",
+      "2025-11-08 16:38:43 - INFO - \n",
+      "==================================================\n",
+      "2025-11-08 16:38:43 - INFO - 사용되지 않은 나머지 문제 필터링 시작...\n",
+      "2025-11-08 16:38:43 - INFO - 사용되지 않은 나머지 문제: 49418개\n",
+      "2025-11-08 16:38:43 - INFO - 나머지 문제 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/2_subdomain/multiple_remaining.json\n",
+      "2025-11-08 16:38:43 - INFO - 전체: 54387개, 사용: 4969개, 남음: 49418개\n",
+      "2025-11-08 16:38:43 - INFO - 모든 작업 완료!\n"
+     ]
+    }
+   ],
    "source": [
     "import os, json, random\n",
     "import logging\n",
@@ -75,7 +202,9 @@
     "set_names = {\n",
     "    1: '1st',\n",
     "    2: '2nd',\n",
-    "    3: '3rd'\n",
+    "    3: '3rd',\n",
+    "    4: '4th',\n",
+    "    5: '5th'\n",
     "}\n",
     "\n",
     "# 로깅 설정\n",
@@ -106,6 +235,9 @@
     "logger.addHandler(file_handler)\n",
     "logger.addHandler(console_handler)\n",
     "\n",
+    "# 부모 로거로 전파 방지 (중복 출력 방지)\n",
+    "logger.propagate = False\n",
+    "\n",
     "# multiple_subdomain_classified_ALL.json 파일에서 모든 데이터 로드\n",
     "ALL_DATA_FILE = os.path.join(PROCESSED_DIR, 'multiple_subdomain_classified_ALL.json')\n",
     "\n",
@@ -126,7 +258,7 @@
     "    logger.info(f\"과목: {exam_name}\")\n",
     "    \n",
     "    # 3세트를 위한 리스트 초기화\n",
-    "    exam_data_sets = [[], [], []]\n",
+    "    exam_data_sets = [[], [], [], [], []]\n",
     "    total_exam_questions = 0\n",
     "    \n",
     "    # domain별로 처리\n",
@@ -140,7 +272,7 @@
     "        # 해당 domain의 데이터 필터링\n",
     "        domain_data = [d for d in all_data if d['domain'] == domain]\n",
     "        \n",
-    "        # subdomain 별로 문제 추출 - 3세트용\n",
+    "        # subdomain 별로 문제 추출 - 5세트용\n",
     "        for subdomain, needed_count in stats[exam_name][domain]['exam_subdomain_distribution'].items():\n",
     "            # 해당 subdomain의 데이터 필터링\n",
     "            subdomain_data = [d for d in domain_data if d['subdomain'] == subdomain]\n",
@@ -157,38 +289,53 @@
     "                \n",
     "                # 3세트 샘플링 (1, 2세트 제외한 데이터에서)\n",
     "                sample3 = random.sample(remaining_data, needed_count)\n",
+    "                remaining_data = [d for d in remaining_data if d not in sample3]\n",
     "                \n",
-    "                logger.info(f\"  - {subdomain}: {needed_count} x 3세트 (총 {len(subdomain_data)}개 중 {needed_count * 3}개 사용)\")\n",
+    "                # 4세트 샘플링 (1, 2, 3세트 제외한 데이터에서)\n",
+    "                sample4 = random.sample(remaining_data, needed_count)\n",
+    "                remaining_data = [d for d in remaining_data if d not in sample4]\n",
+    "\n",
+    "                # 5세트 샘플링 (1, 2, 3, 4세트 제외한 데이터에서)\n",
+    "                sample5 = random.sample(remaining_data, needed_count)\n",
+    "                remaining_data = [d for d in remaining_data if d not in sample5]\n",
+    "                \n",
+    "                logger.info(f\"  - {subdomain}: {needed_count} x 5세트 (총 {len(subdomain_data)}개 중 {needed_count * 5}개 사용)\")\n",
     "                \n",
     "                # 각 세트에 추가 및 사용된 문제 추적\n",
-    "                for item in sample1 + sample2 + sample3:\n",
+    "                for item in sample1 + sample2 + sample3 + sample4 + sample5:\n",
     "                    question_id = (item.get('file_id', ''), item.get('tag', ''))\n",
     "                    used_questions.add(question_id)\n",
     "                \n",
     "                exam_data_sets[0].extend(sample1)\n",
     "                exam_data_sets[1].extend(sample2)\n",
     "                exam_data_sets[2].extend(sample3)\n",
+    "                exam_data_sets[3].extend(sample4)\n",
+    "                exam_data_sets[4].extend(sample5)\n",
     "                \n",
     "            except ValueError:\n",
     "                # 데이터가 부족한 경우\n",
     "                total_available = len(subdomain_data)\n",
     "                sample1 = subdomain_data[:needed_count] if subdomain_data else []\n",
     "                sample2 = subdomain_data[needed_count:needed_count*2] if len(subdomain_data) > needed_count else []\n",
-    "                sample3 = subdomain_data[needed_count*2:] if len(subdomain_data) > needed_count*2 else []\n",
+    "                sample3 = subdomain_data[needed_count*2:needed_count*3] if len(subdomain_data) > needed_count*2 else []\n",
+    "                sample4 = subdomain_data[needed_count*3:needed_count*4] if len(subdomain_data) > needed_count*3 else []\n",
+    "                sample5 = subdomain_data[needed_count*4:] if len(subdomain_data) > needed_count*4 else []\n",
     "                \n",
-    "                logger.warning(f\"  - (ERROR) {subdomain}: {total_available}/{needed_count*3} (데이터 부족: {needed_count*3 - total_available}개 필요)\")\n",
+    "                logger.warning(f\"  - (ERROR) {subdomain}: {total_available}/{needed_count*5} (데이터 부족: {needed_count*5 - total_available}개 필요)\")\n",
     "                \n",
     "                # 사용된 문제 추적\n",
-    "                for item in sample1 + sample2 + sample3:\n",
+    "                for item in sample1 + sample2 + sample3 + sample4 + sample5:\n",
     "                    question_id = (item.get('file_id', ''), item.get('tag', ''))\n",
     "                    used_questions.add(question_id)\n",
     "                \n",
     "                exam_data_sets[0].extend(sample1)\n",
     "                exam_data_sets[1].extend(sample2)\n",
     "                exam_data_sets[2].extend(sample3)\n",
+    "                exam_data_sets[3].extend(sample4)\n",
+    "                exam_data_sets[4].extend(sample5)\n",
     "    \n",
-    "    # 3개 세트로 저장\n",
-    "    for set_num in range(3):\n",
+    "    # 5개 세트로 저장\n",
+    "    for set_num in range(5):\n",
     "        percentage_total = (len(exam_data_sets[set_num])/total_exam_questions*100) if total_exam_questions > 0 else 0\n",
     "        logger.info(f\"  ====> {set_names[set_num+1]}세트: {len(exam_data_sets[set_num])}/{total_exam_questions} ({percentage_total:.2f}%)\")\n",
     "        \n",
@@ -480,9 +627,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-08 16:31:52,383 - WARNING - evaluation_yejin 디렉토리를 찾을 수 없어 /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation을 사용합니다.\n",
+      "2025-11-08 16:31:52,384 - INFO - 출력 디렉토리: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/multiple_with_subdomain\n",
+      "2025-11-08 16:31:52,397 - INFO - 통계 정보 저장 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/multiple_with_subdomain/classification_statistics.json\n"
+     ]
+    }
+   ],
    "source": [
     "import os, json\n",
     "from tools.evaluation import qna_subdomain_classifier\n",
