--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,6 +69,7 @@
     "analysis = {1:'1차 분석', 2:'2차 분석', 3: '3차 분석'}\n",
     "buy = {1:'1차 구매', 2:'2차 구매', 3: '3차 구매'}\n",
     "i = 2\n",
+    "\n",
     "\n",
     "excel_analy = pd.read_excel(os.path.join(base_path, 'book_list_ALL.xlsx'), sheet_name=analysis[i], header=3)[['관리번호', 'ISBN', '도서명', '분류']]"
    ]
@@ -684,7 +685,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "internal",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -698,7 +699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
