--- a/test.ipynb
+++ b/test.ipynb
@@ -1052,12 +1052,169 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Excel 파일에서 정확도 계산 (전체, subject별, domain별, subdomain별)\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from typing import Set\n",
+    "import ast\n",
+    "\n",
+    "# Excel 파일 경로 설정\n",
+    "excel_path = '/home/yjmoon/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/1st_evaluation_EXAONE-4.0-32B.xlsx'\n",
+    "\n",
+    "# Excel 파일 읽기\n",
+    "df_sample = pd.read_excel(excel_path, sheet_name='전체데이터')\n",
+    "pred_long = pd.read_excel(excel_path, sheet_name='모델별예측')\n",
+    "\n",
+    "# answer_set을 Set[int]로 변환하는 헬퍼 함수\n",
+    "def _parse_answer_set(answer_set):\n",
+    "    if isinstance(answer_set, set):\n",
+    "        return answer_set\n",
+    "    elif isinstance(answer_set, str):\n",
+    "        try:\n",
+    "            # 문자열을 파싱해서 Set[int]로 변환\n",
+    "            parsed = ast.literal_eval(answer_set)\n",
+    "            if isinstance(parsed, set):\n",
+    "                return parsed\n",
+    "            elif isinstance(parsed, (list, tuple)):\n",
+    "                return set(parsed)\n",
+    "            else:\n",
+    "                return {int(parsed)}\n",
+    "        except:\n",
+    "            # 파싱 실패 시 빈 집합 반환\n",
+    "            return set()\n",
+    "    else:\n",
+    "        # 숫자나 다른 타입인 경우\n",
+    "        try:\n",
+    "            return {int(answer_set)}\n",
+    "        except:\n",
+    "            return set()\n",
+    "\n",
+    "# 정답 여부 계산 함수\n",
+    "def _is_correct(pred: float, s: Set[int]) -> float:\n",
+    "    if np.isnan(pred) or not s:\n",
+    "        return np.nan\n",
+    "    return float(int(pred) in s)\n",
+    "\n",
+    "# 데이터 병합 및 정확도 계산\n",
+    "key = df_sample[[\"id\", \"answer_set\"]].copy()\n",
+    "merged = pred_long.merge(key, on=\"id\", how=\"left\")\n",
+    "merged[\"answer_set\"] = merged[\"answer_set\"].apply(_parse_answer_set)\n",
+    "merged[\"correct\"] = merged.apply(lambda r: _is_correct(r[\"answer\"], r[\"answer_set\"]), axis=1)\n",
+    "\n",
+    "# 전체 정확도 계산\n",
+    "acc_by_model = (\n",
+    "    merged.groupby(\"model_name\", dropna=False)[\"correct\"]\n",
+    "    .mean()\n",
+    "    .reset_index()\n",
+    "    .rename(columns={\"correct\": \"accuracy\"})\n",
+    "    .sort_values(\"accuracy\", ascending=False)\n",
+    ")\n",
+    "\n",
+    "print(\"=\" * 80)\n",
+    "print(\"📊 전체 정확도\")\n",
+    "print(\"=\" * 80)\n",
+    "for _, row in acc_by_model.iterrows():\n",
+    "    print(f\"  {row['model_name']}: {row['accuracy']:.3f} ({row['accuracy']*100:.1f}%)\")\n",
+    "print()\n",
+    "\n",
+    "# subject별 정확도 계산 (subject 컬럼이 있는 경우)\n",
+    "if 'subject' in df_sample.columns:\n",
+    "    subject_info = df_sample[[\"id\", \"subject\"]].copy()\n",
+    "    merged_with_subject = merged.merge(subject_info, on=\"id\", how=\"left\")\n",
+    "    \n",
+    "    subject_acc = (\n",
+    "        merged_with_subject.groupby([\"subject\", \"model_name\"], dropna=False)[\"correct\"]\n",
+    "        .mean()\n",
+    "        .reset_index()\n",
+    "        .pivot(index=\"subject\", columns=\"model_name\", values=\"correct\")\n",
+    "        .reset_index()\n",
+    "    )\n",
+    "    \n",
+    "    print(\"=\" * 80)\n",
+    "    print(\"📚 Subject별 정확도\")\n",
+    "    print(\"=\" * 80)\n",
+    "    print(subject_acc.to_string(index=False))\n",
+    "    print()\n",
+    "    \n",
+    "    # Subject별 문제 수 통계\n",
+    "    subject_stats = df_sample.groupby('subject').size().reset_index(name='question_count')\n",
+    "    print(\"=\" * 80)\n",
+    "    print(\"📈 Subject별 문제 수\")\n",
+    "    print(\"=\" * 80)\n",
+    "    print(subject_stats.to_string(index=False))\n",
+    "    print()\n",
+    "\n",
+    "# domain별 정확도 계산 (domain 컬럼이 있는 경우)\n",
+    "if 'domain' in df_sample.columns:\n",
+    "    domain_info = df_sample[[\"id\", \"domain\"]].copy()\n",
+    "    merged_with_domain = merged.merge(domain_info, on=\"id\", how=\"left\")\n",
+    "    \n",
+    "    domain_acc = (\n",
+    "        merged_with_domain.groupby([\"domain\", \"model_name\"], dropna=False)[\"correct\"]\n",
+    "        .mean()\n",
+    "        .reset_index()\n",
+    "        .pivot(index=\"domain\", columns=\"model_name\", values=\"correct\")\n",
+    "        .reset_index()\n",
+    "    )\n",
+    "    \n",
+    "    print(\"=\" * 80)\n",
+    "    print(\"🏆 Domain별 정확도\")\n",
+    "    print(\"=\" * 80)\n",
+    "    print(domain_acc.to_string(index=False))\n",
+    "    print()\n",
+    "    \n",
+    "    # Domain별 문제 수 통계\n",
+    "    domain_stats = df_sample.groupby('domain').size().reset_index(name='question_count')\n",
+    "    print(\"=\" * 80)\n",
+    "    print(\"📈 Domain별 문제 수\")\n",
+    "    print(\"=\" * 80)\n",
+    "    print(domain_stats.to_string(index=False))\n",
+    "    print()\n",
+    "\n",
+    "# subdomain별 정확도 계산 (subdomain 컬럼이 있는 경우)\n",
+    "if 'subdomain' in df_sample.columns:\n",
+    "    subdomain_info = df_sample[[\"id\", \"domain\", \"subdomain\"]].copy()\n",
+    "    merged_with_subdomain = merged.merge(subdomain_info, on=\"id\", how=\"left\")\n",
+    "    \n",
+    "    subdomain_acc = (\n",
+    "        merged_with_subdomain.groupby([\"domain\", \"subdomain\", \"model_name\"], dropna=False)[\"correct\"]\n",
+    "        .mean()\n",
+    "        .reset_index()\n",
+    "        .pivot(index=[\"domain\", \"subdomain\"], columns=\"model_name\", values=\"correct\")\n",
+    "        .reset_index()\n",
+    "    )\n",
+    "    \n",
+    "    print(\"=\" * 80)\n",
+    "    print(\"📋 Subdomain별 정확도\")\n",
+    "    print(\"=\" * 80)\n",
+    "    print(subdomain_acc.to_string(index=False))\n",
+    "    print()\n",
+    "    \n",
+    "    # Subdomain별 문제 수 통계\n",
+    "    subdomain_stats = df_sample.groupby(['domain', 'subdomain']).size().reset_index(name='question_count')\n",
+    "    print(\"=\" * 80)\n",
+    "    print(\"📈 Subdomain별 문제 수\")\n",
+    "    print(\"=\" * 80)\n",
+    "    print(subdomain_stats.to_string(index=False))\n",
+    "    print()\n",
+    "\n",
+    "print(\"=\" * 80)\n",
+    "print(\"✅ 정확도 계산 완료\")\n",
+    "print(\"=\" * 80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aic",
+   "display_name": "eval",
    "language": "python",
    "name": "python3"
   },
@@ -1071,7 +1228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.19"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
